--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <body>
     <div class="card">
         <div class="image-container">
-            <img src="img/foto.jpg" alt="Exposición Conexiones - Boston Printmakers">
+            <img src="foto.jpg" alt="Exposición Conexiones - Boston Printmakers">
         </div>
         
         <a href="DOSSIER CONEXIONES.pdf" class="download-button" download="DOSSIER CONEXIONES.pdf">
